--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -5,6 +5,11 @@
 
 @custom-variant dark (&:is(.dark *));
 
+.active{
+  background-color: var(--accent);
+  color: var(--accent-foreground);
+}
+
 :root {
   --background: #ebebeb;
   --foreground: oklch(0.145 0 0);
