--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,11 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto+Condensed:wght@100..900&family=Roboto:wght@100..900&display=swap");
 
 @import "tailwindcss";
+@plugin 'tailwind-scrollbar';
 @import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
 
-.active{
+.active {
   background-color: var(--accent);
   color: var(--accent-foreground);
 }
@@ -22,7 +23,7 @@
   --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.205 0 0);
   --muted: oklch(0.97 0 0);
-  --muted-foreground: oklch(0.556 0 0);
+  --muted-foreground: oklch(0.35 0 0);
   --accent: hsl(0 82.8% 30.6%);
   --accent-foreground: oklch(0.985 0 0);
   --destructive: oklch(0.577 0.245 27.325);
@@ -62,7 +63,7 @@
   --secondary: oklch(0.269 0 0);
   --secondary-foreground: oklch(0.985 0 0);
   --muted: oklch(0.269 0 0);
-  --muted-foreground: oklch(0.708 0 0);
+  --muted-foreground: oklch(0.8 0 0);
   --accent: hsl(0 82.8% 30.6%);
   --accent-foreground: oklch(0.985 0 0);
   --destructive: oklch(0.396 0.141 25.723);
