--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@100..900&family=Roboto:wght@100..900&family=Ramabhadra&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@100..900&display=swap");
 
 @import "tailwindcss";
 @plugin 'tailwind-scrollbar';
